objects/Last_Activity__c.object
<CustomObject>
    <description>Object to display Last Activity by Sales Channel for an Accounts, Opportunity, or Lead</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Activity records are related to either an Account, Lead, or Opportunity. If an Activity (Event or Task) occurred on an Account or Campaign, a Last Activity record is created with this Account relationship set to the Account. The &quot;Related To&quot; field is also set (for reporting) to the Account for all Last Activity records.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Last Activities</relationshipLabel>
        <relationshipName>Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <label>Activity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Activity_Id__c, LEFT(Activity_Subject__c,40) &amp; (IF(LEN(Activity_Subject__c) &gt; 40,&quot;...&quot;,&quot;&quot;)), &quot;blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Subject__c</fullName>
        <label>Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Activity (Event or Task) is related to a Campaign primarily, this field would be set to the Campaign ID. However, Campaign Activities are recorded on the Account Last Activity record rather than on a separate Campaign Last Activity record.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Last Activities</relationshipLabel>
        <relationshipName>Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <label>Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Activity records are related to either an Account, Lead, or Opportunity. If an Activity (Event or Task) occurred on a Lead, a Last Activity record is created with this Lead relationship set to the Lead. The &quot;Related To&quot; field is also set (for reporting) to the Account for all Last Activity records.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Last Activities</relationshipLabel>
        <relationshipName>Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Activity records are related to either an Account, Lead, or Opportunity. If an Activity (Event or Task) occurred on an Opportunity, a Last Activity record is created with this Opportunity relationship set to the Opportunity. The &quot;Related To&quot; field is also set (for reporting) to the Account for all Last Activity records.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Last Activities</relationshipLabel>
        <relationshipName>Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_IDs__c</fullName>
        <description>This field is only for reference; it contains the Salesforce IDs of the related objects.</description>
        <inlineHelpText>This field is only for reference; it contains the Salesforce IDs of the related objects.</inlineHelpText>
        <label>Related IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <description>Set to the Account for all Last Activity records.</description>
        <label>Related To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Last Activities (Related To)</relationshipLabel>
        <relationshipName>Account_Related_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Last Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Related_IDs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Related_To__c</columns>
        <columns>Related_IDs__c</columns>
        <columns>Account__c</columns>
        <columns>Campaign__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Last Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Last Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>